# platform_info_plugin

./: LICENSE  README.md  pyproject.toml
src/platform_info_plugin/: __init__.py  exceptions.py
